--- a/package.json
+++ b/package.json
@@ -10,5 +10,6 @@
     "@nuxtjs/color-mode": "^3.1.4",
     "@nuxtjs/tailwindcss": "^5.3.2",
     "nuxt": "3.0.0-rc.9"
-  }
+  },
+  "dependencies": {}
 }
