--- a/package.json
+++ b/package.json
@@ -11,5 +11,7 @@
     "@nuxtjs/tailwindcss": "^5.3.2",
     "nuxt": "3.0.0-rc.9"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gsap": "^3.11.2"
+  }
 }
