--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.1.4",
+    "@nuxtjs/supabase": "^0.2.3",
     "@nuxtjs/tailwindcss": "^5.3.2",
     "nuxt": "3.0.0-rc.9"
   },
