feat(auth): login + register page

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "format": "prettier --write \"**/*.{js,ts,vue,md}\""
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.2.0",
