--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-tsc": "^1.6.1"
   },
   "dependencies": {
+    "@nuxt/image-edge": "^1.0.0-28088394.4d9df43",
     "@vercel/analytics": "^1.0.0"
   }
 }
