--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "format": "prettier --write \"**/*.{ts,vue,json,md,css}\""
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -15,6 +16,7 @@
     "@nuxtjs/supabase": "^1.1.3",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "nuxt": "^3.7.4",
+    "prettier": "3.0.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
